test/errors/struct_field_not_a_type.haste
const S = struct {
    x: 42;
};
